# Aircraft

./: .buildconfig  .gitignore  .gitmodules  Application  CMakeLists.txt  COPYING  README.md  meson.build  one.suzamax.Aircraft.json
cmake/: FindGTKMM.cmake  GlibUtils.cmake  InstallScript.cmake  uninstall.sh
data/: CMakeLists.txt  app.css  com.github.suzamax.Aircraft.appdata.xml.in  com.github.suzamax.Aircraft.desktop.in.in  com.github.suzamax.Aircraft.gresource.xml  light.css  meson.build  one.suzamax.Aircraft.appdata.xml.in  one.suzamax.Aircraft.desktop.in  one.suzamax.Aircraft.gresource.xml.in  one.suzamax.Aircraft.gschema.xml
data/ui/: headerbar.glade  menu.glade  preferences.glade  window.glade
include/td/telegram/: td_api.h  td_api.hpp
lib/: tdjson.gir  tdjson.pc  tdjson.vapi  tdlog.pc  tdlog.vapi
lib/cmake/Td/: TdConfigVersion.cmake  TdTargets-release.cmake  TdTargets.cmake
lib/pkgconfig/: tdactor.pc  tdapi.pc  tdclient.pc  tdcore.pc  tddb.pc  tdjson.pc  tdjson_private.pc  tdjson_static.pc  tdnet.pc  tdsqlite.pc  tdutils.pc
po/: POTFILES  meson.build
src/: Account.vala  AircraftDBus.vala  Application.vala  CMakeLists.txt  Client.vala  Connection.vala  ConnectionHandler.vala  Handler.vala  Logger.vala  MainWindow.vala  MetadataComponent.vala  Serializer.vala  TelegramAccount.vala  TelegramID.vala  UpdateHandler.vala  UpdateStates.vala  Utils.vala  aircraft-window.cpp  aircraft-window.h  aircraft-window.ui  aircraft-window.ui~  aircraft.gresource.xml  application.cpp  application.h  main.cpp  meson.build  overloaded.h  preferences.cpp  preferences.h  projectdefinitions.h  tg_auth.cpp  tg_auth.hpp  tg_client.cpp  tg_client.hpp  tg_state.cpp  tg_state.hpp  tg_thread.cpp  tg_thread.hpp  window.cpp  window.h
src/Dialogs/: CodeDialog.vala  NewAccountDialog.vala
src/Objects/: MPRIS.vala
src/Utils/: ActionUtils.vala  MessageUtils.vala
src/Views/: ChatListView.vala  MainWindow.vala
